# esp32_vfd_clock

./: CMakeLists.txt  Makefile  sdkconfig
frontend/: index.html  script.js  style.css
main/: CMakeLists.txt  backend.c  backend.h  bmp085.c  bmp085.h  display.c  display.h  http.c  http.h  http_ap.c  i2c_bus.c  i2c_bus.h  index.html  main.c  sensors.c  sensors.h  sht21.c  sht21.h  style.css  vfd.c  vfd.h  webServer.c  webServer.h  wifiSta.c  wifiap.c  wifiap.h
main/wifi_interface/: wifiSta.c  wifiSta.h  wifi_interface.c  wifi_interface.h  wifiap.c  wifiap.h
